# cmem-plugin-sparql-anything

./: .copier-answers.env  .copier-answers.yml  .gitignore  .tasks-plugin.yml  CHANGELOG.md  README-public.md  README.md  pyproject.toml
.github/workflows/: check.yml  publish.yml
cmem_plugin_sparql_anything/: __init__.py  constants.py  sparql_anything_workflow.py  utils.py
tests/: test_sparql_anything.py  test_utils.py
tests/fixtures/: sample.xlsx
